enable hmr watching of index.ejs

--- a/src/index.html
+++ b/src/index.html
@@ -61,11 +61,12 @@
   <div class="container">
     <div class="row">
       <div class="col-md-8">
-        <h1>Webpack 2 and Twitter Bootstrap</h1>
-        <h2>Build optimized CSS and JavaScript</h2>
+        <h1>We created Codesmith to be a hub of groundbreaking technology</h1>
+        <p>The heart of Codesmith is the Software Engineering Immersive, a program where engineers build compelling open-source projects, develop as autonomous problem solvers and excellent communicators, and build expertise in computer science, fullstack JavaScript and machine learning.</p>
+        <p>Students are drawn from diverse backgrounds - from PhDs to self-teachers. Each student showed enormous potential in five capacities, and a passion for building and supporting each other.</p>
       </div>
       <div class="col-md-4">
-        <p><img class="img-responsive" src=<%=require( "./images/img_twitter-bootstrap.png") %> /></p>
+        <p><img class="img-responsive" src=<%=require( "./images/hero-hex-01.png") %> /></p>
       </div>
     </div>
   </div>
